NetBSD Problem Report #50713

From www@NetBSD.org  Tue Jan 26 09:22:00 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 23ECB7ABC4
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 26 Jan 2016 09:22:00 +0000 (UTC)
Message-Id: <20160126092159.44E387ACB5@mollari.NetBSD.org>
Date: Tue, 26 Jan 2016 09:21:59 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/usr.sbin/sysinst/disks.c: 2 * memory leak ?
X-Send-Pr-Version: www-1.0

>Number:         50713
>Category:       bin
>Synopsis:       src/usr.sbin/sysinst/disks.c: 2 * memory leak ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jan 26 09:25:00 +0000 2016
>Closed-Date:    Tue Jan 26 14:09:57 +0000 2016
>Last-Modified:  Tue Jan 26 14:10:01 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160125
>Organization:
>Environment:
>Description:
1.

[src/usr.sbin/sysinst/disks.c:804]: (error) Memory leak: devdev

Source code is

       if (error != 0)
            return error;

2.

src/usr.sbin/sysinst/disks.c:1059]: (error) Memory leak: prog

Source code is

    if (access(prog, X_OK) != 0)
        return 0;



>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: bin-bug-people->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Tue, 26 Jan 2016 14:09:57 +0000
Responsible-Changed-Why:
take


State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Tue, 26 Jan 2016 14:09:57 +0000
State-Changed-Why:
Fixed, thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50713 CVS commit: src/usr.sbin/sysinst
Date: Tue, 26 Jan 2016 14:05:29 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Jan 26 14:05:29 UTC 2016

 Modified Files:
 	src/usr.sbin/sysinst: disks.c

 Log Message:
 David Binderman in PR bin/50713: fix memory leaks


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/usr.sbin/sysinst/disks.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.