David Binderman in PR bin/50713: fix memory leaks